--- a/ReadME
+++ b/ReadME
@@ -155,7 +155,7 @@ pause
 Exemplo:
 @echo off
 cd C:\Clinica
-C:\Users\bento\AppData\Local\Programs\Python\Python313\python.exe main.py
+C:\Users\Usuario\AppData\Local\Programs\Python\Python313\python.exe main.py
 pause
 
 para achar o python 
